--- a/index.html
+++ b/index.html
@@ -751,14 +751,14 @@
                 </a>
                 <div className="pt-10">
                   <div className="flex justify-center gap-4">
-                    <a href="#">
+                    <a href="CSGO">
                       <img
                         src="https://i.imgur.com/jNabMaS_d.webp?maxwidth=760&fidelity=grand"
                         alt="فروش آیتم های کانتر استریک"
                         className="w-[555px] h-[130px] object-cover neon-border-orange"
                       />
                     </a>
-                    <a href="#">
+                    <a href="DOTA2">
                       <img
                         src="https://i.imgur.com/ySMzF0e_d.webp?maxwidth=760&fidelity=grand"
                         alt="فروش آیتم های دوتا"
@@ -788,14 +788,14 @@
                 </div>
 				<div className="pt-10">
                   <div className="flex justify-center gap-4">
-                    <a href="#">
+                    <a href="EVENT">
                       <img
                         src="https://i.imgur.com/svlXWrj_d.webp?maxwidth=760&fidelity=grand"
                         alt="لیگ مسابقات دوتا 2"
                         className="w-[555px] h-[130px] object-cover neon-border-cyan"
                       />
                     </a>
-                    <a href="#">
+                    <a href="INVENTORY">
                       <img
                         src="https://i.imgur.com/oXFTH2J_d.webp?maxwidth=760&fidelity=grand"
                         alt="اینونتوری استیم"
