--- a/index.html
+++ b/index.html
@@ -742,11 +742,16 @@
               <div className="relative h-120 bg-cover bg-center">
                 <a href="#">
                   <center>
-                    <img
-                      src="https://i.imgur.com/NUeQpDa_d.webp?maxwidth=760&fidelity=grand"
-                      alt="نمینوبنر خوش آمدگویی"
-                      className="w-450 h-100 object-cover neon-border"
-                    />
+                     </a>
+                      <div className="pt-10">
+                       <div className="flex justify-center gap-4">
+                         <a href="CSGO">
+                          <img
+                        src="https://nemino.ir/img/Gem%20Mobile%20Legends.jpg"
+                        alt="خرید جم موبایل لجندز Mobile Legends Bang Bang"
+                        className="w-[555px] h-[130px] object-cover neon-border-orange"
+                          />
+                         </a>
                   </center>
                 </a>
                 <div className="pt-10">
