--- a/NEOVA/index.html
+++ b/NEOVA/index.html
@@ -1,139 +1,105 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa" dir="ltr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>N E M I N O</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NIMA NEOVA</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@900&family=Rajdhani:wght@700&display=swap" rel="stylesheet">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Rajdhani:wght@600&display=swap');
+    *{margin:0;padding:0;box-sizing:border-box}
+    body,html{height:100%;background:#000;overflow:hidden;color:#fff;font-family:'Orbitron',sans-serif}
 
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body, html {
-      height: 100%;
-      font-family: 'Rajdhani', sans-serif;
-      overflow: hidden;
-      background: #000;
+    .bg{
+      position:fixed;inset:0;
+      background:url('https://nemino.ir/NEOVA/Nima%20Neova.jpg') center/cover no-repeat;
+      filter:brightness(0.88);z-index:1
     }
-    .bg {
-      position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: url('https://scontent-ams2-1.cdninstagram.com/v/t51.29350-15/176447426_294384422240417_1188176811350257568_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjE0MzN4MTY1NC5zZHIuZjI5MzUwLmRlZmF1bHRfaW1hZ2UuYzIifQ&_nc_ht=scontent-ams2-1.cdninstagram.com&_nc_cat=105&_nc_oc=Q6cZ2QFPZRpstSpGx_Khv_X4TOAwm004C4KqV__VV-XUtdC27gjrpAN52l_t5XtUsxvlSxQ&_nc_ohc=W5OIlRCIMR8Q7kNvwEwZApk&_nc_gid=eiHgi_MTLSnWm61oxJs6dg&edm=APs17CUBAAAA&ccb=7-5&ig_cache_key=MjU1Nzg1OTYzNTU5NTg1Njc1NQ%3D%3D.3-ccb7-5&oh=00_AfmGVMwD1Us-msFP7McoLyglulkDeaF14gAzlWRpoz7_hg&oe=69343284&_nc_sid=10d13b') center center / cover no-repeat;
-      filter: brightness(0.7);
-      z-index: -2;
+    .overlay{
+      position:fixed;inset:0;
+      background:radial-gradient(circle at center,rgba(0,0,0,0.1) 0%,rgba(0,0,0,0.6) 100%);
+      z-index:2
     }
-    .overlay {
-      position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.45);
-      z-index: -1;
-    }
-    .container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 18px;
-      z-index: 10;
-    }
-    .logo {
-      width: 140px;
-      filter: drop-shadow(0 0 20px #a100ff);
-      margin-bottom: 10px;
-      transition: all 0.4s;
-    }
-    .logo:hover { transform: scale(1.1); }
-    .name {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 4.5rem;
-      background: linear-gradient(45deg, #c00fff, #ff00c8, #7300ff);
-      -webkit-background-clip: text;
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 40px rgba(180,0,255,0.8);
-      letter-spacing: 12px;
-      margin-bottom: 30px;
-      cursor: pointer;
-      transition: all 0.4s;
-    }
-    .name:hover { transform: translateY(-5px); text-shadow: 0 0 60px rgba(180,0,255,1); }
 
-    .link-box {
-      width: 340px;
-      max-width: 90vw;
-      padding: 16px 28px;
-      border-radius: 50px;
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      color: white;
-      font-weight: 600;
-      font-size: 1.25rem;
-      text-decoration: none;
-      position: relative;
-      overflow: hidden;
-      transition: all 0.4s ease;
-      box-shadow: 0 0 30px rgba(0,0,0,0.6);
+    .main{
+      position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);
+      width:90vmin;max-width:520px;
+      display:flex;flex-direction:column;align-items:center;gap:2.8vmin;z-index:10
     }
-    .link-box:hover {
-      transform: translateY(-6px) scale(1.03);
+
+    .logo{
+      width:18vmin;max-width:160px;
+      filter:drop-shadow(0 0 40px #ff00ff);margin-bottom:1.5vmin;transition:.4s
     }
-    .link-box::before {
-      content: '';
-      position: absolute;
-      top: 0; left: -100%;
-      width: 100%; height: 100%;
-      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
-      transition: 0.7s;
+    .logo:hover{transform:scale(1.18) rotate(3deg)}
+
+    /* اسم — در یک خط، کاملاً وسط، بدون بهم‌ریختگی */
+    .name{
+      font-size:clamp(2.8rem,7.5vmin,4.8rem);font-weight:900;
+      letter-spacing:0.8vmin;
+      background:linear-gradient(90deg,#ff0044,#ff5500,#ff2200,#ff00aa);
+      -webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;
+      text-shadow:
+        0 0 30px #ff0044,
+        0 0 70px #ff2200,
+        0 0 110px #ff00aa,
+        0 0 150px #ff00ff;
+      animation:fireGlow 3s infinite alternate;
+      white-space:nowrap;
+      text-align:center;
+      width:max-content;
+      position:relative;
     }
-    .link-box:hover::before { left: 100%; }
-
-    /* SoundCloud - Orange */
-    .sc { background: rgba(255,90,0,0.25); border: 1px solid #ff8800; box-shadow: 0 0 25px #ff550066; }
-    .sc:hover { box-shadow: 0 0 40px #ff5500aa; }
-    .sc svg { fill: #ff8800; filter: drop-shadow(0 0 10px #ff5500); }
-
-    /* YouTube - Red */
-    .yt { background: rgba(255,0,0,0.25); border: 1px solid #ff0000; box-shadow: 0 0 25px #ff000066; }
-    .yt:hover { box-shadow: 0 0 40px #ff0000aa; }
-    .yt svg { fill: #ff0000; filter: drop-shadow(0 0 10px #ff0000); }
-
-    /* Spotify - Green */
-    .sp { background: rgba(30,215,96,0.25); border: 1px solid #1ed760; box-shadow: 0 0 25px #1ed76066; }
-    .sp:hover { box-shadow: 0 0 40px #1ed760aa; }
-    .sp svg { fill: #1ed760; filter: drop-shadow(0 0 10px #1ed760); }
-
-    /* Apple Music - White */
-    .am { background: rgba(255,255,255,0.15); border: 1px solid #fafafa; box-shadow: 0 0 25px #ffffff66; }
-    .am:hover { box-shadow: 0 0 40px #ffffffaa; }
-    .am svg { fill: #fafafa; filter: drop-shadow(0 0 10px #fff); }
-
-    /* Google - White/Multi */
-    .gg { background: rgba(255,255,255,0.15); border: 1px solid #fff; box-shadow: 0 0 25px #ffffff66; }
-    .gg:hover { box-shadow: 0 0 40px #ffffffaa; }
-    .gg svg { fill: #fff; filter: drop-shadow(0 0 10px #fff); }
-
-    /* Telegram - Light Blue */
-    .tg { background: rgba(0,180,255,0.2); border: 1px solid #00aaff; box-shadow: 0 0 30px #00aaff66; }
-    .tg:hover { box-shadow: 0 0 50px #00aaffaa; }
-    .tg svg { fill: #00aaff; filter: drop-shadow(0 0 15px #00eeff); }
-
-    /* Neon particles background */
-    .particles {
-      position: absolute;
-      width: 6px; height: 6px;
-      border-radius: 50%;
-      animation: float 8s infinite linear;
-      pointer-events: none;
-      z-index: 1;
+    @keyframes fireGlow{
+      0%{text-shadow:0 0 30px #ff0044,0 0 70px #ff2200,0 0 110px #ff00aa}
+      100%{text-shadow:0 0 40px #ff0044,0 0 90px #ff5500,0 0 140px #ff00ff,0 0 180px #ff0088}
     }
-    @keyframes float {
-      0% { transform: translateY(0) translateX(0); opacity: 0; }
-      10% { opacity: 1; }
-      90% { opacity: 1; }
-      100% { transform: translateY(-1000px) translateX(100px); opacity: 0; }
+
+    .link{
+      width:90vmin;max-width:400px;height:10vmin;max-height:60px;min-height:48px;
+      border-radius:50px;position:relative;display:flex;align-items:center;justify-content:center;
+      font-size:clamp(1.1rem,3.5vmin,1.5rem);font-weight:800;
+      text-decoration:none;color:#fff;overflow:hidden;
+      backdrop-filter:blur(18px);border:2px solid;
+      box-shadow:0 0 6vmin rgba(255,255,255,.22);transition:all .4s
+    }
+    .link:hover{
+      transform:scale(1.08);box-shadow:0 0 14vmin rgba(255,255,255,.6)
+    }
+
+    .icon{
+      position:absolute;left:6vmin;top:50%;transform:translateY(-50%);
+      width:7.5vmin;height:7.5vmin;min-width:32px;min-height:32px;
+      filter:drop-shadow(0 0 5vmin currentColor)
+    }
+
+    .sc{border-color:#ff5500;background:rgba(255,85,0,.32);--neon:#ff5500}
+    .yt{border-color:#ff0000;background:rgba(255,0,0,.38);--neon:#ff0000}
+    .am{border-color:#fff;background:rgba(255,255,255,.22);--neon:#fff}
+    .sp{border-color:#1ed760;background:rgba(30,215,96,.3);--neon:#1ed760}
+    .gg{border-color:#fff;background:rgba(255,255,255,.2);--neon:#fff}
+    .tg{border-color:#00aaff;background:rgba(0,170,255,.34);--neon:#00eeff}
+
+    .neon-particles{position:absolute;inset:-110px;pointer-events:none;overflow:hidden}
+    .neon-particle{
+      position:absolute;width:7px;height:7px;background:var(--neon);border-radius:50%;
+      box-shadow:0 0 36px 8px var(--neon);animation:float linear infinite;opacity:0
+    }
+    @keyframes float{
+      0%{transform:translate(0,0) scale(0);opacity:0}
+      12%{opacity:1}
+      88%{opacity:0.8}
+      100%{transform:translate(var(--x),var(--y)) scale(1.5);opacity:0}
+    }
+
+    .ash{
+      position:absolute;width:6px;height:6px;background:#ff6600;border-radius:50%;
+      box-shadow:0 0 20px #ff8800;pointer-events:none;opacity:0;
+      animation:ashRise 4s infinite linear
+    }
+    @keyframes ashRise{
+      0%{transform:translateY(0) scale(0);opacity:0}
+      20%{opacity:1}
+      100%{transform:translateY(-400px) translateX(var(--drift)) scale(0);opacity:0}
     }
   </style>
 </head>
@@ -142,61 +108,88 @@
 <div class="bg"></div>
 <div class="overlay"></div>
 
-<div class="container">
+<div class="main">
   <a href="https://nemino.ir/" target="_blank">
-    <img src="https://i.imgur.com/XTaZBQw.png" alt="NEMINO" class="logo">
-  </a>
-  <a href="https://nemino.ir/" target="_blank" class="name">N E M I N O</a>
-
-  <a href="https://soundcloud.com/neova_n" target="_blank" class="link-box sc">
-    <svg width="28" height="28" viewBox="0 0 24 24"><path d="M23.6 12c0-5.5-4.5-10-10-10-4.3 0-8.1 2.7-9.5 6.7C1.8 9.3 0 11.3 0 13.7 0 16.2 2.2 18 5 18h18.3c2.4 0 4.4-1.9 4.4-4.3 0-2.2-1.7-4-3.7-4.1z"/></svg>
-    <span>SOUNDCLOUD</span>
+    <img src="https://i.imgur.com/XTaZBQw.png" class="logo">
   </a>
 
-  <a href="https://music.apple.com/artist/nemino/1593466881" target="_blank" class="link-box am">
-    <svg width="28" height="28" viewBox="0 0 24 24"><path d="M18.7 3.2c-1.7-2-4.5-2.2-5.5-2.2-2.3 0-4.4 1.4-5.3 3.5-.8-1.2-2.2-2-3.7-2-2.8 0-5.2 2.3-5.2 5.8 0 1.5.6 2.9 1.6 4 .9 1 2.3 1.7 3.8 1.7.8 0 1.6-.3 2.2-.7.6.4 1.3.7 2.1.7 2.4 0 4.3-1.9 4.3-4.3 0-.6-.1-1.2-.3-1.7.9-.8 1.5-2 1.5-3.3 0-2.4-1.9-4.3-4.3-4.3-.8 0-1.6.2-2.2.6-.2-.8-.8-1.5-1.6-1.9 1.1-1.2 2.7-1.9 4.4-1.9 1.8 0 3.5.9 4.5 2.3.8 1.2 1.2 2.7 1.2 4.3 0 1.6-.7 3-1.8 4-.4.4-.6 1-.6 1.6 0 1.7 1.4 3.1 3.1 3.1 1 0 1.9-.5 2.5-1.3.7-1 1.1-2.3 1.1-3.6 0-2.7-2-5-4.6-5.7z"/></svg>
-    <span>APPLE MUSIC</span>
-  </a>
+  <div class="name">NIMA NEOVA</div>
+  <div id="ash-container"></div>
 
-  <a href="https://open.spotify.com/artist/6BiDiKKbLGwcoCecY9AOzl" target="_blank" class="link-box sp">
-    <svg width="28" height="28" viewBox="0 0 24 24"><path d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.6 0 12 0zm5.5 17.3c-.2.3-.5.4-.8.2-1.8-1.1-4-1.3-6.6-1-.4 0-.7-.3-.7-.7 0-.4.3-.7.7-.7 2.9.4 5.4.6 7.5 1.8.3.2.4.6.2.8zm1-3.1c-.2.4-.6.5-1 .3-2-1.3-5.1-1.6-7.6-1.4-.4 0-.8-.3-.8-.8 0-.4.3-.8.8-.8 3 .2 6.4.6 8.8 2.1.4.2.5.7.3 1.1zm1.1-3.3c-2.4-1.4-6.4-1.8-8.7-1.6-.5 0-1-.4-1-1 0-.5.4-1 1-1 2.7-.2 7.1.2 9.9 1.9.4.3.6.9.4 1.4-.3.4-.9.6-1.3.3z"/></svg>
-    <span>SPOTIFY</span>
-  </a>
+  <!-- ترتیب دلخواه -->
+  <div style="position:relative">
+    <a href="https://soundcloud.com/neova_n" target="_blank" class="link sc">
+      <img src="https://cdn.worldvectorlogo.com/logos/soundcloud-2.svg" class="icon">SOUNDCLOUD
+    </a>
+    <div class="neon-particles" data-glow></div>
+  </div>
 
-  <a href="https://share.google/92NrzrsvnvNHv4QS9" target="_blank" class="link-box gg">
-    <svg width="28" height="28" viewBox="0 0 24 24"><path d="M12.2 9.2v3.6h5.8c-.2 1.4-1.7 4.1-5.8 4.1-3.5 0-6.4-2.9-6.4-6.4s2.9-6.4 6.4-6.4c2 0 3.4.9 4.4 1.6l3-2.9C17.9 2.3 15.2 1 12.2 1 6.6 1 2 5.6 2 11.2s4.6 10.2 10.2 10.2c5.9 0 9.8-4.1 9.8-9.9 0-.7-.1-1.5-.2-2.1l-9.6-.2z" fill="#fff"/></svg>
-    <span>GOOGLE</span>
-  </a>
+  <div style="position:relative">
+    <a href="https://www.youtube.com/@nimaneova" target="_blank" class="link yt">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_(2017).svg" class="icon">YOUTUBE
+    </a>
+    <div class="neon-particles" data-glow></div>
+  </div>
 
-  <a href="https://www.youtube.com/@nimaneova" target="_blank" class="link-box yt">
-    <svg width="32" height="32" viewBox="0 0 24 24"><path d="M23.5 6.2s-.2-1.6-1-2.3c-1.1-1.3-2.3-1.3-2.8-1.4-4-.3-10-.3-10-.3s-6 0-10 .3c-.5.1-1.7.1-2.8 1.4C-.1 4.6 0 6.2.1 6.2S0 8 0 9.8v2.4c0 1.8.1 3.6.1 3.6s.2 1.6 1 2.3c1.1 1.3 2.5 1.2 3.2 1.4 2.3.2 9.7.3 9.7.3s6 0 10-.3c.5-.1 1.7-.1 2.8-1.4.8-.7 1-2.3 1-2.3s.1-1.8.1-3.6v-2.4c-.1-1.8-.2-3.6-.2-3.6zM9.5 15.5V8.2l7.3 3.7-7.3 3.6z"/></svg>
-    <span>YOUTUBE</span>
-  </a>
+  <div style="position:relative">
+    <a href="https://music.apple.com/artist/nemino/1593466881" target="_blank" class="link am">
+      <img src="https://freepngimg.com/download/apple/58717-logo-apple-iphone-png-download-free.png" class="icon">APPLE MUSIC
+    </a>
+    <div class="neon-particles" data-glow></div>
+  </div>
 
-  <a href="https://t.me/neminoofficial" target="_blank" class="link-box tg">
-    <svg width="28" height="28" viewBox="0 0 24 24"><path d="M23.9 4.6L20.2 20c-.3 1.4-1.1 1.7-2.3 1.1l-5.8-4.3-2.8 2.7c-.3.3-.6.6-1.2.6-.8 0-1.2-.4-1.4-.8l-2-6.5-5.8-1.8c-1.3-.4-1.3-1.3.3-1.9l23.2-8.9c1.1-.5 2.1.3 1.8 1.9z"/></svg>
-    <span>TELEGRAM</span>
-  </a>
+  <div style="position:relative">
+    <a href="https://open.spotify.com/artist/6BiDiKKbLGwcoCecY9AOzl" target="_blank" class="link sp">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" class="icon">SPOTIFY
+    </a>
+    <div class="neon-particles" data-glow></div>
+  </div>
+
+  <div style="position:relative">
+    <a href="https://share.google/92NrzrsvnvNHv4QS9" target="_blank" class="link gg">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" class="icon">GOOGLE
+    </a>
+    <div class="neon-particles" data-glow></div>
+  </div>
+
+  <div style="position:relative">
+    <a href="https://t.me/NEOVA" target="_blank" class="link tg">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" class="icon">TELEGRAM
+    </a>
+    <div class="neon-particles" data-glow></div>
+  </div>
 </div>
 
-<!-- Neon particles effect -->
-<div id="particles"></div>
-
 <script>
-  // Random neon particles
-  const colors = ['#ff5500', '#ff0000', '#1ed760', '#ffffff', '#00aaff', '#c00fff'];
-  const container = document.getElementById('particles');
-
+  // خاکستر از اسم
   setInterval(() => {
-    const p = document.createElement('div');
-    p.classList.add('particles');
-    p.style.left = Math.random() * window.innerWidth + 'px';
-    p.style.background = colors[Math.floor(Math.random() * colors.length)];
-    p.style.boxShadow = `0 0 15px ${p.style.background}`;
-    p.style.animationDuration = (Math.random() * 6 + 6) + 's';
-    container.appendChild(p);
-    setTimeout(() => p.remove(), 12000);
-  }, 300);
+    const ash = document.createElement('div');
+    ash.className = 'ash';
+    ash.style.left = (40 + Math.random() * 20) + '%';
+    ash.style.setProperty('--drift', (Math.random() - 0.5) * 300 + 'px');
+    document.getElementById('ash-container').appendChild(ash);
+    setTimeout(() => ash.remove(), 4000);
+  }, 250);
+
+  // نئون MLBB
+  document.querySelectorAll('[data-glow]').forEach(c => {
+    const color = c.previousElementSibling.classList.contains('link')
+      ? getComputedStyle(c.previousElementSibling).getPropertyValue('--neon') : '#fff';
+    function p() {
+      const e = document.createElement('div'); e.className = 'neon-particle';
+      e.style.background = color; e.style.boxShadow = `0 0 40px 8px ${color}`;
+      e.style.top = Math.random() * 100 + '%'; e.style.left = Math.random() * 100 + '%';
+      const a = Math.random() * Math.PI * 2, d = Math.random() * 220 + 160;
+      const dur = Math.random() * 4 + 7;
+      e.style.setProperty('--x', Math.cos(a) * d + 'px');
+      e.style.setProperty('--y', Math.sin(a) * d + 'px');
+      e.style.animationDuration = dur + 's';
+      c.appendChild(e);
+      setTimeout(() => e.remove(), dur * 1000);
+    }
+    for (let i = 0; i < 60; i++) setTimeout(p, i * 70);
+    setInterval(p, 300);
+  });
 </script>
 </body>
 </html>
